<resources>
    <string name="app_name">BarAndRestaurant</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_order">Order</string>
    <string name="orders">Orders</string>
    <string name="stats">Statistics</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_0">0</string>
    <string name="ok">OK</string>
    <string name="_4">4</string>
    <string name="login_error">Error occurred during login, Check Network</string>
    <string name="login_failed">Login Failed Please Try Again</string>
    <string name="key_waiter_id">waiter_id</string>
    <string name="key_products_version">products_version</string>
    <string name="ticket">Ticket</string>
    <string name="request_order">Request Order</string>
    <string name="Checkout">CheckOutOrder</string>
    <string name="OrderList">Orders</string>
    <string name="date">Date :</string>
    <string name="order_details">Order Details</string>
    <string name="string_ok">OK</string>
    <string name="string_cancel">CANCEL</string>
    <string name="checked_out">CheckedOut</string>
    <string name="not_checked_out">NotCheckedOut</string>
</resources>
