<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:gravity="center"
             android:orientation="vertical"
             tools:context="com.mobitill.barandrestaurant.auth.AuthFragment">


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/gridLayout"
        android:layout_marginBottom="28dp"
        android:gravity="center_horizontal"
        android:inputType="numberPassword"
        android:focusable="false"
        android:layout_alignEnd="@+id/gridLayout"
        android:layout_alignStart="@+id/gridLayout"
        android:id="@+id/password"/>

    <ImageButton
        android:id="@+id/backspace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_backspace_black_24dp"
        android:layout_alignTop="@+id/password"
        android:layout_alignEnd="@+id/password"
        android:background="@null"/>

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:columnCount="3"
        android:orientation="horizontal"
        android:id="@+id/gridLayout">

        <Button android:text="@string/_1"
            android:id="@+id/_1"/>
        <Button android:text="@string/_2"
            android:id="@+id/_2"/>
        <Button android:text="@string/_3"
            android:id="@+id/_3"/>
        <Button android:text="@string/_4"
            android:id="@+id/_4"/>
        <Button android:text="@string/_5"
            android:id="@+id/_5"/>
        <Button android:text="@string/_6"
            android:id="@+id/_6"/>
        <Button android:text="@string/_7"
            android:id="@+id/_7"/>
        <Button android:text="@string/_8"
            android:id="@+id/_8"/>
        <Button android:text="@string/_9"
            android:id="@+id/_9"/>
        <Button android:text="@string/_0"
                android:id="@+id/_0"
            android:layout_column="1"/>
        <Button android:id="@+id/submit"
               android:text="@string/ok"/>

    </GridLayout>

</RelativeLayout>
